# tauri_vue3

./: README.md  eslint.config.js  package.json  pnpm-lock.yaml
public/: seekWorker.ts
src/: App.vue  main.ts  style.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  main.rs
src/components/: Music.vue  useMusic.ts
